--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.13",
     "prisma": "^5.12.1",
+    "pug": "^3.0.2",
     "redis": "^4.6.13",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
