--- a/package.json
+++ b/package.json
@@ -91,5 +91,13 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "overrides": {
+    "string-width": "4.2.3",
+    "strip-ansi": "6.0.0"
+  },
+  "resolutions": {
+    "string-width": "4.2.3",
+    "strip-ansi": "6.0.0"
   }
 }
